--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,12 @@
                                             <div class="mb-3">
                                                 <label for="recipient-name" class="col-form-label">Nombre:</label>
                                                 <input type="text" class="form-control" id="recipient-name" name="nombre" value="">
+                                                <label for="recipient-name" class="col-form-label">Fecha de Creacion:</label>
+                                                <input type="text" class="form-control" id="recipient-name" name="nombre" value="">
+                                                <select class="form-select" aria-label="Default select example" name="estado">
+                                                    <option value="false">Inactivo</option>
+                                                    <option value="true">Activo</option>
+                                                </select>
                                             </div>
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                                             <button type="submit" class="btn btn-primary" disabled="">Enviar</button>
